V2: new html, add json, lazy load

--- a/index.html
+++ b/index.html
@@ -37,634 +37,12 @@
 		</div>
 	</header>
 	<div class="wrap wrap-top">
-		<div class="js-area wrap-item active">
-			<div class="col">
-				<h3 class="my-3">Diablo</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/ma7o0mbwhzmrkc7pgae8s6mn9y4dwobq.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Diablo II">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Diablo II</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2000</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/e8c004mcc7rj9oqm6nnsmgltyvedw4ut.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Diablo III">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Diablo III</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2012</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Dragon Age</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/9tsua9pvpjy3h254dud6upxn8rancso5.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Dragon Age: Origins">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Dragon
-									Age: Origins</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2009</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Fallout</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/13a8ttdv8mq2h4zp0c2jwx9da58bsxl1.jpeg" class="img-fluid shadow-sm wp-post-image"
-								alt="Fallout 2">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Fallout 2</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">1998</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/xntr6ob3e879d6vs32il3qip5divb8az.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Fallout 3">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Fallout 3</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2008</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">FlatOut</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/7tnq3o3tqto0af6eioaxsjml4ph9cgbv.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="FlatOut">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>FlatOut</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2004</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Gothic</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/7xs9innhey7z2brtb0cd4vwjkxlqdvw7.png" class="img-fluid shadow-sm wp-post-image"
-								alt="Gothic II">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Gothic II</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2002</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/6dvjvkwgqmspu9zhcnqp1wu0fcwh4orz.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Gothic 3">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Gothic 3</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2006</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/gothic_pt.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Gothic Playable Teaser">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Gothic Playable Teaser</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2019</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Grand Theft Auto</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/p49lbf3uh95iqnvl213aso0hrd5l2vot.JPG" class="img-fluid shadow-sm wp-post-image"
-								alt="Grand Theft Auto III">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Grand Theft Auto III</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2002</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/trl42ji28iz5ij5w33sayr10ilpwpfuz.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Grand Theft Auto: Vice City">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Grand
-									Theft Auto: Vice City</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2003</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/387n7xt8jb63tcs9qodtd3564wcq4pgr.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Grand Theft Auto: San Andreas">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Grand
-									Theft Auto: San Andreas</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2005</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/1lnufshto746a8ynpxz6dlvkd6ewvgx7.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Grand Theft Auto IV">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Grand
-									Theft Auto IV</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2008</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/g2vy24czcjngmx9ktt3t18belyfbn3ip.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Grand Theft Auto V">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Grand
-									Theft Auto V</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2015</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Half-Life</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/suyon31rxuc3q8y5uhj2ktewb835blru.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Half-Life">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Half-Life</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">1998</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/fvmabmhzeulmcs48v5w87rjy4ho9dy57.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Half-Life 2">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Half-Life 2</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2004</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/pijuz9wvnivuy0vlchui0sadg526uaj9.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Half-Life 2: Episode One">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Half-Life
-									2: Episode One</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2006</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/r0s083jzfcc4qkntowas9k7a72x9v3p3.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Half-Life 2: Episode Two">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Half-Life
-									2: Episode Two</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2007</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Injustice</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/0du1hjnsqgkdw3gno2bmgzg82dtjjtx4.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Injustice: Gods Among Us">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Injustice:
-									Gods Among Us</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2013</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Left 4 Dead</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/000sjbfrxxh6wyn7mc9w2gfcrlbz1s4m.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Left 4 Dead">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Left 4
-									Dead</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2008</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/xme4l1vc5ifw2ks3x3ncy3em04iu9xyy.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Left 4 Dead 2">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Left 4 Dead
-									2</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2009</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Mafia</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/4mprbk8fkal7rec658o7u5nr7w2owx12.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Mafia: The City of Lost Heaven">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Mafia:
-									The City of Lost Heaven</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2002</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/3bj91cnh10wgefbom2zpyb2mgrsx4hrz.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Mafia II">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Mafia II</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2010</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Max Payne</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/2mr26tew0pmb9sy2p853vkz2h1hpker7.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Max Payne">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Max Payne</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2001</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/8u0o3ejpokxy73mbzldmluruzu7w3aee.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Max Payne 2: The Fall of Max Payne">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Max Payne 2: The Fall of Max Payne</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2003</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/2j4ecad3mt76mt0uozmlxd7wafvysjwy.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Max Payne 3">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Max Payne 3</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2012</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Mortal Kombat</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/t5wmgmbof92yheotz7grfuticj82k2pw.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Mortal Kombat">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Mortal
-									Kombat</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2013</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/i3sblrmo4kqp690xmlled7h0ecba1drk.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Mortal Kombat X">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Mortal
-									Kombat X</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2015</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Portal</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/wp2yp54mf5k8kwwrsyzul5edxqypp4to.webp" class="img-fluid shadow-sm wp-post-image"
-								alt="Portal">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Portal</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2007</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/pmfkx0pkr7m3wv3hkr0z7munlkv3vntq.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Portal 2">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Portal 2</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2011</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Tekken</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/skyxawtls8ikyfjhvjsncjoka3rpg9vu.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="Tekken 7">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Tekken 7</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2017</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">The Elder Scrolls</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/iqqhouxw5hn2ibygffrzto70lej7t0k4.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="The Elder Scrolls IV: Oblivion">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>The Elder Scrolls IV: Oblivion</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2006</div>
-							</div>
-						</div>
-					</div>
-					<div class="flex-item">
-						<span>
-							<img src="img/games/yf9wma7j4jpnd7u044p7py7vbz831n4z.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="The Elder Scrolls V: Skyrim">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>The Elder Scrolls V: Skyrim</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2011</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<h3 class="my-3">Trine</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/games/trine.jpeg" class="img-fluid shadow-sm wp-post-image"
-								alt="Trine Enchanted Edition">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>Trine Enchanted Edition</a>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">2009</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="js-area wrap-item">
-			<div class="col">
-				<h3 class="my-3">ITVDN</h3>
-			</div>
-			<div class="col">
-				<div class="row">
-					<div class="flex-item">
-						<span>
-							<img src="img/education/TP86396263-front.jpg" class="img-fluid shadow-sm wp-post-image"
-								alt="PHP Стартовый renewed">
-						</span>
-						<div class="p-1 my-2">
-							<h6 class="item-name">
-								<span>PHP Стартовый renewed</span>
-							</h6>
-							<div class="labels-block">
-								<div class="item-field">20.05.2022</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		<div class="js-area wrap-item active" data-type="games"></div>
+		<div class="js-area wrap-item" data-type="education"></div>
 	</div>
 
+	<script src="json/games.json"></script>
+	<script src="json/education.json"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
